--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
 
 html{
     font-size: 62.5%;
-    /* scroll-behavior: smooth ; */
+    scroll-behavior: smooth ;
 }
 
 /* --------------------------------------Utility Class------------------------------------ */
